@@ -1,4 +1,7 @@
 - string-based FROM clauses fixed, i.e. select(..., from_obj=["sometext"])
+- fixes to passive_deletes flag, lazy=None (noload) flag
+- added example/docs for dealing with large collections
+- added object_session() method to sqlalchemy namespace
 
 0.3.2
 - major connection pool bug fixed.  fixes MySQL out of sync
